--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             // Your code to initialize the map goes here
         }
     </script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./js/index.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
 <body>
